--- a/BlockbusterWebApp/BlockbusterApp.master
+++ b/BlockbusterWebApp/BlockbusterApp.master
@@ -5,6 +5,25 @@
 <head runat="server">
 <meta charset="utf-8" />    
     <title>Blockbuster Video</title>
+
+    <script type="text/javascript" src="JavaScript/jquery-1.3.2.min.js"></script>
+    <script type="text/javascript">
+        function mainMenu() {
+            $(" #nav ul ").css({ display: "none" });
+
+            $(" #nav li ").hover(function () {
+                $(this).find('ul:first').css({ visibility: "visible", display: "none" }).show(400);
+            }
+            , function () {
+                $(this).find('ul:first').css({ visibility: "hidden" });
+            });
+        }
+
+        $(document).ready(function () {
+            mainMenu();
+        });
+    </script>
+
     <link rel="stylesheet" type="text/css" href="~/Styles/BlockbusterStyles.css" />
 </head>
 <body>
@@ -14,9 +33,23 @@
                 
             </div>
             <div id="navigation">
-                
+                <ul id="nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Video List</a></li>
+                    
+                    <li><a href="#">Store Locator</a></li>
+                    <li><a href="#">Employee Portal</a></li>
+                     <ul>
+                         <li><a href="#">Inventory Management</a></li>
+                         <li><a href="#">Admin</a></li>
+                     </ul>
+                    <li><a href="#">Profile</a></li>
+                </ul>
             </div>
             <div id="contentArea">
+                
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
                 
             </div>
             <div id="sidebar">
