--- a/BlockbusterWebApp/Styles/BlockbusterStyles.css
+++ b/BlockbusterWebApp/Styles/BlockbusterStyles.css
@@ -27,6 +27,46 @@
     height: 60px;
     border: 3px solid #E3E3E3;
     margin-top: 20px;
+    background-image: url('../Project_Images/tabbar-solid-bg@2x (1).png');
+    text-shadow: 0.1em 0.1em #333;
+}
+
+#nav {
+    list-style: none;
+}
+
+#nav ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+    width: auto;
+    display: none;
+}
+
+#nav li {
+    font-size: 24px;
+    float: left;
+    position: relative;
+    width: 180px;
+    height: 50px;
+}
+
+#nav li ul li {
+    background-image: url('../Project_Images/tabbar-solid-bg@2x (1).png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 3px solid #E3E3E3;
+    padding-left: 10px;
+}
+
+#nav a:link, #nav a:active, #nav a:visited {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+}
+
+#nav a:hover {
+    color: lightblue;
 }
 
 /*main content area style */
@@ -53,4 +93,8 @@
     width: auto;
     height: 40px;
     margin-top: 20px;
+    background-image: url('../Project_Images/tabbar-solid-bg@2x (1).png');
+    text-shadow: 0.1em 0.1em #333;
+    color: #fff;
+    text-align: center;
 }
